Corrected image source, added conflicting lines to readme

--- a/pagina2.html
+++ b/pagina2.html
@@ -36,7 +36,7 @@
 	</table>
 
 	<a href="https://en.wikipedia.org/wiki/Laser_Kiwi_flag">
-		<img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/f5/Fire_the_Lazer.svg/600px-Fire_the_Lazer.svg.png">
+		<img src="images\kiwi_laser.png">
 	</a>
 </body>
 </html>
