added local media file and updated reference in HTML file

--- a/paginaethan.html
+++ b/paginaethan.html
@@ -17,7 +17,7 @@
     
     </p>
 
-    <img src="https://s2.abcstatics.com/media/recreo/2022/01/19/nieve2-kxS--1248x698@abc.PNG">
+    <img src="images/mountain.PNG">
 
     <title> Toma muestral de libros leidos en un mes</title>
 
